# HilbertRTree

./: Main.hs  README.markdown  ReadRects.hs  hilbertrtree.cabal
Data/: HRTree.hs
Data/HRTree/: Geometry.hs  GeometryTest.hs  Hilbert.hs  HilbertTest.hs  Internal.hs  Test.hs  Utilities.hs
test/: Test.hs
test/Data/HRTree/: GeometryTest.hs  HilbertTest.hs  UtilitiesTest.hs
