Name:               HilbertRTree
Version:            0.1
Synopsis:           Simple Hilbert RTree
Description:        Stores spatial data in an RTree indexed by hilbert distance
Author:             Drew Haven
Maintainer:         Drew Haven <drew.haven@gmail.com>
Build-depends:      base >= 4,
                    bytestring,
                    containers,
                    mtl,
                    attoparsec
Build-type:         Simple

cabal-version:  >= 1.2
library
        exposed-modules:
                Data.HRTree
        other-modules:
                Data.HRTree.Hilbert
                Data.HRTree.Internal
                Data.HRTree.Geometry

        build-depends: base
        ghc-options: -Wall -O2
