Name:               HilbertRTree
Version:            0.2.1
Synopsis:           Simple Hilbert RTree
Description:        Stores spatial data in an RTree indexed by hilbert distance
Author:             Drew Haven
Maintainer:         Drew Haven <drew.haven@gmail.com>
Build-depends:      base >= 4,
                    bytestring,
                    containers,
                    mtl,
                    attoparsec
Build-type:         Simple

cabal-version:  >= 1.2
library
        exposed-modules:
                Data.HRTree
        other-modules:
                Data.HRTree.Hilbert
                Data.HRTree.Internal
                Data.HRTree.Geometry
                Data.HRTree.Utilities

        build-depends: base, binary >= 0.5, derive >= 2.5
        ghc-options: -Wall

Test-suite tests
  Type:              exitcode-stdio-1.0
  Hs-source-dirs:    test, .
  Main-is:           Test.hs
  Build-depends:     base >= 4, QuickCheck >= 2
  Ghc-options:       -Wall
